Closed Bug 17034 Opened 26 years ago Closed 26 years ago

[DOGFOOD] MIME-encoded headers are quoted raw (without decoding) in Forward inline mode

Categories

(MailNews Core :: MIME, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: momoi, Assigned: rhp)

Details

(Whiteboard: [PDT+])

Attachments

(1 file)

** Observed with 10/21/99 Win32 M11 build ** There is perhaps another bug filed for this but just in case theer isn't, I'm filing one now. With the above build, all foward inline msgs failt to decode MIME-encoded headers and display them raw in the Compose window. Forward as attachment quotes generally correctly, though some Latin 1 characters seem to be displayed wrong.
QA Contact: lchiang → momoi
Assigning myself as QA contact.
Status: NEW → ASSIGNED
Target Milestone: M11
Test cases as attachments save lots of time when I start looking at these issues :-) - rhp
rich,the file is the current International Smoke test in ZIP format. All of the messages (5) use MIME-encoded headers. Just drop this into the POP folder, select any one of the messages and engage forward/inline. You'll see raw MIME-encoded header in the subject header field and also in the subject header display of the Message View pane.
Whiteboard: [PDT+]
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
This should be fixed already. -- Jeff
Status: RESOLVED → REOPENED
Reopen the bug. I just checked and the problem indeed is there. The doc loader also crashes when I try to forward inline.
Assignee: rhp → jefft
Status: REOPENED → NEW
I'll take this one.
Status: NEW → ASSIGNED
Resolution: FIXED → ---
Accepting...
Clear resolution ...
It's interesting to note that with today's build, Japanese examples don't crash when thye are forwarded in inline mode. I found also a few other languages which don't crash. But Latin 1,UTF-8, and several other language messages I tried crashed Mozilla.
We are crashing in Line 642. For some reason base->QueryInterface() succedded with null doc. Who needs to be contack with problem in nsDocLoader.cpp? NS_IMETHODIMP nsDocLoaderImpl::GetContentViewerContainer(PRUint32 aDocumentID, nsIContentViewerContainer** aResult) { nsISupports* base = (nsISupports*) aDocumentID; nsIDocument* doc; nsresult rv; rv = base->QueryInterface(kIDocumentIID, (void**)&doc); if (NS_SUCCEEDED(rv)) { nsIPresShell* pres; pres = doc->GetShellAt(0);
Assignee: jefft → rhp
Status: ASSIGNED → NEW
I have made changes to mimedrft.cpp to decode encoded word prior setting to the composition fields. We still need some works to be done in ConvertAndLoadComposeWindow(). Reassign to rhp for further i18n/reply/quoting work. mimedrft.cpp changed.
Status: NEW → ASSIGNED
Target Milestone: M11 → M12
Jeff, Naoki and I have exchanged LOTS of email on this one. I think that I have a solution that will work for quoting. Currently, we have most of it working, but the places it breaks are because of the problems with the way I am building the cached quoting data (I think). I know the fixes that I want to put into place, but it will take some work and is something I don't want to rush so I will saving this one for my first priority of M12. - rhp
Summary: [Dogfood] MIME-encoded headers are quoted raw (without decoding) in Forward inline mode → [DOGFOOD] MIME-encoded headers are quoted raw (without decoding) in Forward inline mode
Status: ASSIGNED → RESOLVED
Closed: 26 years ago26 years ago
Resolution: --- → FIXED
This should be fixed with the latest checkins to fix quoting. - rhp
Status: RESOLVED → VERIFIED
** Checked with 11/9/99 Win32 build (1999110911) ** With the above build, MIME-encoded headers are correctly decoded as they get pulled into subject header.I looked at several different language examples and they all got quoted OK. Marking the fix verified.
Blocks: 18471
No longer blocks: 18471
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: