partial fix for bug 17034; decode encoded words prior setting to the composition fields; r=nhotta,rhp